2012-12-27  Lars Ingebrigtsen  <larsi@gnus.org>

	* nntp.el (nntp-open-connection): Use HELP as the capability command
	instead of CAPABILITY because Typhoon v2.2.2.503 chokes completely on
	unknown commands.  And CAPABILITY is an unknown command (bug#12763).

2012-12-27  Wolfgang Jenkner  <wjenkner@inode.at>

	* gnus-spec.el (gnus-face-face-function): Don't use nil as no-op face
	place holder since this gives `Invalid face reference: nil' messages.
	Use the `default' face instead.  It has the same effect here, even
	though it is not no-op.

	* gnus-util.el
	(gnus-put-text-property-excluding-characters-with-faces): Similarly.

2012-12-27  Lars Ingebrigtsen  <larsi@gnus.org>

	* gnus-msg.el (gnus-summary-resend-message): Don't bug out on
	non-string posting styles (bug#13285).

2012-12-27  Glenn Morris  <rgm@gnu.org>

	* plstore.el (plstore-passphrase-callback-function):
	Use plstore-get-file.

2012-12-27  Andreas Schwab  <schwab@linux-m68k.org>

	* mml2015.el (mml2015-epg-key-image): separate attribute stream from
	stderr.

2012-12-26  Katsumi Yamaoka  <yamaoka@jpl.org>

	* mml2015.el (mml2015-epg-key-image): Use mm-set-buffer-multibyte.

	* gnus-compat.el (set-buffer-multibyte): Remove.

2012-12-25  Adam Sjøgren  <asjo@koldfront.dk>

	* mml2015.el (mml2015-epg-key-image): use --attribute-fd rather than
	temporary file to get PGP key image. Pass no-show-photos when extracting
	image to avoid having it pop up twice.

2012-12-26  Lars Ingebrigtsen  <larsi@gnus.org>

	* gnus-art.el (gnus-article-treat-types): Include text/html as parts
	eligible for treatment.

	* gnus-util.el (gnus-goto-colon): Move to the beginning of the visual
	lines.  This makes summary commands with hidden threads work more
	reliably.

	* gnus-cite.el (gnus-article-hide-citation-maybe): Leave an expansion
	button to mark the hidden citations (bug#9395).

2012-12-26  Daiki Ueno  <ueno@gnu.org>

	* mml2015.el (mml2015-epg-signature-to-string): New function.